# monomarket

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  security.yml
configs/: config.example.yaml  soak.paper.yaml
docs/: architecture.md  backtest-schema.md  backtest-vs-paper-alignment-template.md  runbook.md  strategies.md
scripts/: backfill_history_signals.py  backtest_cycle.sh  backtest_nightly_report.sh  backtest_pdf_report.py  backtest_topic_analysis.py  backtest_web_report.py  ci_local.sh  import_pmxt_snapshots.py  nightly_summary_line.py  paper_soak_24h.sh  paper_soak_status.sh  s10_param_grid_compare.py  sx12_dual_slice_compare.py
src/monomarket/: __init__.py  cli.py  config.py  models.py
src/monomarket/backtest/: __init__.py  engine.py  reject_reason.py  schema.py
src/monomarket/data/: __init__.py  clients.py  ingestion.py
src/monomarket/db/: __init__.py  storage.py
src/monomarket/execution/: __init__.py  live.py  paper.py  risk.py  router.py
tests/: test_backtest.py  test_backtest_schema.py  test_backtest_web_report.py  test_cli_strategy_defaults.py  test_generate_signals_cli.py  test_ingestion_enhancements.py  test_live_executor.py  test_nightly_summary_contract.py  test_reject_reason_normalization.py  test_s10_param_grid_compare.py  test_s10_strategy.py  test_s1_strategy.py  test_s2_strategy.py  test_s4_strategy.py  test_s8_strategy.py  test_s9_strategy.py  test_signal_universe_filter.py  test_smoke.py  test_switches.py  test_sx12_dual_slice_compare.py
(+16 files in other folders)
