[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monomarket"
version = "0.1.0"
description = "MVP systematic trading framework for Polymarket-style binary markets"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Rocky"}]
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20241230",
  "types-requests>=2.32.0.20241016",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
  "pre-commit>=3.7.1",
]

[project.scripts]
monomarket = "monomarket.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
